tests/ui/pattern/usefulness/match-byte-array-patterns.stderr
error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:8:9
   |
LL |         b"AAAA" => {},
   |         ------- matches all the relevant values
LL |         &[0x41, 0x41, 0x41, 0x41] => {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/match-byte-array-patterns.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:14:9
   |
LL |         &[0x41, 0x41, 0x41, 0x41] => {}
   |         ------------------------- matches all the relevant values
LL |         b"AAAA" => {},
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:20:9
   |
LL |         &[_, 0x41, 0x41, 0x41] => {},
   |         ---------------------- matches all the relevant values
LL |         b"AAAA" => {},
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:26:9
   |
LL |         &[0x41, .., 0x41] => {}
   |         ----------------- matches all the relevant values
LL |         b"AAAA" => {},
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:34:9
   |
LL |         b"AAAA" => {},
   |         ------- matches all the relevant values
LL |         &[0x41, 0x41, 0x41, 0x41] => {}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:40:9
   |
LL |         &[0x41, 0x41, 0x41, 0x41] => {}
   |         ------------------------- matches all the relevant values
LL |         b"AAAA" => {},
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:46:9
   |
LL |         &[_, 0x41, 0x41, 0x41] => {},
   |         ---------------------- matches all the relevant values
LL |         b"AAAA" => {},
   |         ^^^^^^^ no value can reach this

error: unreachable pattern
  --> $DIR/match-byte-array-patterns.rs:52:9
   |
LL |         &[0x41, .., 0x41] => {}
   |         ----------------- matches all the relevant values
LL |         b"AAAA" => {},
   |         ^^^^^^^ no value can reach this

error: aborting due to 8 previous errors

